# routes/project_routes.go
@@ -10,6 +10,7 @@ func RegisterProjectRoutes(http *gin.Engine) {
 	{
 		r.POST("/", controllers.CreateProject)
 		r.GET("/", controllers.GetProjects)
-		r.POST("/:id/compare", controllers.Compare)
+		r.GET("/:id/compare", controllers.Compare)
+		r.GET("/:id/dump", controllers.Dump)
 	}
 }
